WIP: More openapi changes
